Update analysis notebooks

--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
     "merged.plot(column=\"Town\", \n",
     "            legend=True, \n",
     "            figsize=(14,5), \n",
-    "            cmap='OrRd',\n",
+    "            cmap='YlGnBu',\n",
     "            edgecolor='lightgrey',\n",
     "            missing_kwds={'color': 'white'} )\n",
     "plt.xticks([])\n",
