Update model architecture

--- a/notebooks/data_analysis.ipynb
+++ b/notebooks/data_analysis.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "\n",
     "# Load the parent directory to access the src module\n",
     "sys.path.append(\"../\")\n",
-    "from src.data_processing import load_data\n",
+    "from src.dp import load_data\n",
     "\n",
     "np.random.seed(2025)"
    ]
